[gd_scene load_steps=3 format=2]

[ext_resource path="res://interface/Login.gd" type="Script" id=1]
[ext_resource path="res://themes/kenneyUI-green.tres" type="Theme" id=2]

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.0
margin_top = -56.0
margin_right = 63.0
margin_bottom = 56.0

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
margin_right = 195.0
margin_bottom = 174.0

[node name="Username" type="HBoxContainer" parent="Container/VBoxContainer"]
margin_right = 195.0
margin_bottom = 39.0

[node name="Label" type="Label" parent="Container/VBoxContainer/Username"]
margin_top = 10.0
margin_right = 66.0
margin_bottom = 28.0
text = "Email:"

[node name="LineEdit" type="LineEdit" parent="Container/VBoxContainer/Username"]
margin_left = 70.0
margin_right = 148.866
margin_bottom = 39.4343

[node name="Password" type="HBoxContainer" parent="Container/VBoxContainer"]
margin_top = 43.0
margin_right = 195.0
margin_bottom = 82.0

[node name="Label" type="Label" parent="Container/VBoxContainer/Password"]
margin_top = 10.0
margin_right = 113.0
margin_bottom = 28.0
text = "Password:"

[node name="LineEdit" type="LineEdit" parent="Container/VBoxContainer/Password"]
margin_left = 117.0
margin_right = 195.866
margin_bottom = 39.4343

[node name="LoginButton" type="Button" parent="Container/VBoxContainer"]
margin_top = 86.0
margin_right = 195.0
margin_bottom = 128.251
text = "SIGN IN"

[node name="Back" type="Button" parent="Container/VBoxContainer"]
margin_top = 132.0
margin_right = 195.0
margin_bottom = 174.251
text = "GO BACK"

[node name="Notification" type="Label" parent="Container"]
margin_top = 178.0
margin_right = 195.0
margin_bottom = 196.0
autowrap = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Title" type="Label" parent="."]
margin_left = 449.0
margin_top = 50.0
margin_right = 644.0
margin_bottom = 107.0
text = "LOGIN SCREEN"
align = 1

[connection signal="pressed" from="Container/VBoxContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
